<resources>
    <string name="app_name">WG Helper</string>
    <string name="readme" ><![CDATA[
<h1>Read me</h1>
This app implemented the on-demand feature for WireGuard Android.
<ol>
<li>For avoid app to be killed, please turn on Autostart; and set Battery saver to "No restrictions".
<a href="https://dontkillmyapp.com/">
How to adjust</a></li>
<li>For get Wifi SSID, please grant "Allowed all the time" for App location permissions.
</li>
<li>Grant WireGuard permission by adb on computer. run the below command on Windows console.
<br/><br/>
<font color="red">
adb shell pm grant com.claudejiang.wghelper com.wireguard.android.permission.CONTROL_TUNNELS
</font>
</li>
</ol>
]]></string>
    <string name="wg_name">WG Name</string>
    <string name="input_wireguard_name">Input WireGuard name</string>
    <string name="ssids">SSIDs</string>
    <string name="ssids_input_hint">Input wifi ssids, split by comma</string>
    <string name="wg_name_desc">The WireGuard name configured in WireGuard App</string>
    <string name="ssid_input_desc">If connected to wifi with these ssids, will turn off WireGuard. \n If keep empty, will turn off WireGuard when connected to any wifi.</string>
    <string name="switch_desc">Enable/Disable WG Helper</string>
    <string name="turn_on_wireguard_title">Turn on WireGuard</string>
    <string name="turn_off_wireguard_title">Turn off WireGuard</string>
    <string name="turn_on_wireguard_scheduled_content">Use cellular network, turn on WireGuard by scheduling</string>
    <string name="turn_off_wireguard_scheduled_content">Use wifi network, turn off WireGuard by scheduling</string>
    <string name="turn_on_wireguard_content">Use cellular network, turn on WireGuard by network changing</string>
    <string name="turn_off_wireguard_content">Use wifi network, turn off WireGuard by network changing</string>
    <string name="input_wg_name_before_switch">Please input WireGuard Name before turn on WireGuard helper.</string>
    <string name="notificationSwitch">Enable/Disable notification</string>
</resources>